tests/src/Loader/classloader/generics/Instantiation/Negative/param06.ilproj
<Project Sdk="Microsoft.NET.Sdk.IL" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
  <PropertyGroup>
    <AssemblyName>param06</AssemblyName>
    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
    <OutputType>Exe</OutputType>
    <CLRTestKind>BuildAndRun</CLRTestKind>
    <CLRTestPriority>1</CLRTestPriority>
  </PropertyGroup>
  <ItemGroup />
  <ItemGroup>
    <Compile Include="param06.il" />
  </ItemGroup>
  <ItemGroup />
</Project>